[gd_scene load_steps=3 format=3 uid="uid://d34ff5wgr3k4a"]

[ext_resource type="Script" path="res://host_server_disp.gd" id="1_by8wl"]
[ext_resource type="Texture2D" uid="uid://br5rg5jv7c4cr" path="res://assets/eyeClosed.png" id="2_fywim"]

[node name="host" type="HBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_by8wl")

[node name="lan" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="m" type="MarginContainer" parent="lan"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = -1

[node name="Label" type="Label" parent="lan/m"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "LAN only"

[node name="butt" type="MarginContainer" parent="lan"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/margin_left = -4
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = -4
theme_override_constants/margin_bottom = -4

[node name="check" type="CheckButton" parent="lan/butt"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Your IP"
alignment = 1
editable = false
secret = true

[node name="hide" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("2_fywim")

[node name="port" type="Label" parent="."]
layout_mode = 2
text = " Host on Port : "

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 1024.0
alignment = 1

[node name="password" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password"
alignment = 1

[node name="open" type="Button" parent="."]
layout_mode = 2
text = "> Run <"

[connection signal="toggled" from="lan/butt/check" to="." method="_on_check_toggled"]
[connection signal="toggled" from="hide" to="." method="_on_hide_toggled"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="open" to="." method="_on_open_pressed"]
